[B]Version 1.1.92[/B]
KissJAV - remove defunct Models category
        - add country menus
Chaturbate - fix listings, tags, search
BongaCams - fix contests, playback